--- a/delorean.cabal
+++ b/delorean.cabal
@@ -1,11 +1,11 @@
 name:                  delorean
 version:               0.0.1
 license:               AllRightsReserved
-author:                Mark Hibberd <mark@hibberd.id.au>
-maintainer:            Mark Hibberd <mark@hibberd.id.au>
-copyright:             (c) 2014 Mark Hibberd
+author:                Ambiata <info@ambiata.com>
+maintainer:            Ambiata <info@ambiata.com>
+copyright:             (c) 2015 Ambiata.
 synopsis:              delorean
-category:              System
+category:              Data
 cabal-version:         >= 1.8
 build-type:            Simple
 description:           delorean.
