--- a/test/delorean-test.cabal
+++ b/test/delorean-test.cabal
@@ -1,6 +1,7 @@
 name:                  delorean-test
 version:               0.0.1
 cabal-version:         >= 1.8
+build-type:            Simple
 
 library
   build-depends:
