--- a/delorean.cabal
+++ b/delorean.cabal
@@ -13,13 +13,13 @@ description:           delorean.
 library
   build-depends:
                        base                            >= 3          && < 5
-                     , attoparsec                      == 0.11.*
+                     , attoparsec                      >= 0.11       && < 0.13
                      , p
                      , template-haskell
                      , text                            == 1.2.*
                      , time                            == 1.4.*
-                     , tz                              == 0.0.0.5
-                     , tzdata                          == 0.1.20140324.0
+                     , tz                              == 0.0.0.*
+                     , tzdata                          == 0.1.*
 
   ghc-options:
                        -Wall
