--- a/test/delorean-test.cabal
+++ b/test/delorean-test.cabal
@@ -11,4 +11,4 @@ library
                      , QuickCheck
 
   exposed-modules:
-                       Delorean.Arbitrary
+                       Test.Delorean.Arbitrary
