--- a/delorean.cabal
+++ b/delorean.cabal
@@ -15,6 +15,7 @@ library
                        base                            >= 3          && < 5
                      , attoparsec                      >= 0.11       && < 0.13
                      , p
+                     , x-templatehaskell
                      , template-haskell
                      , text                            == 1.2.*
                      , time                            == 1.4.*
