--- a/delorean.cabal
+++ b/delorean.cabal
@@ -24,7 +24,7 @@ library
                      , tzdata                          == 0.1.*
 
   ghc-options:
-                       -Wall
+                       -Wall -funbox-strict-fields
 
   hs-source-dirs:
                        src
