--- a/delorean.cabal
+++ b/delorean.cabal
@@ -19,7 +19,7 @@ library
                      , attoparsec                      >= 0.11       && < 0.14
                      , template-haskell
                      , text                            == 1.2.*
-                     , time                            == 1.4.*
+                     , time                            >= 1.4        && < 1.6
                      , tz                              <  0.1.1
                      , tzdata                          == 0.1.*
 
