--- a/master.toml
+++ b/master.toml
@@ -1,9 +1,16 @@
 [master]
-  runner = "s3://ambiata-dist/master-ambiata/master-haskell-library-0.0.1-20151215000723-8d39770"
+  runner = "s3://ambiata-dispensary-v2/dist/master/master-haskell/linux/x86_64/20160614225955-a2cc8b9/master-haskell-20160614225955-a2cc8b9"
   version = 1
-  sha1 = "ba56eb538b8fc92ffd32ceb364279ac2038f63db"
+  sha1 = "f827e1ff43bcaa325d128662391d95a8b4d65525"
 
-[build.dist]
+[build.dist-7-10]
+  GHC_VERSION = "7.10.2"
+  CABAL_VERSION = "1.22.4.0"
   HADDOCK = "true"
+  HADDOCK_S3 = "$AMBIATA_HADDOCK_MASTER"
 
-[build.branches]
+[build.branches-7-10]
+  GHC_VERSION = "7.10.2"
+  CABAL_VERSION = "1.22.4.0"
+  HADDOCK = "true"
+  HADDOCK_S3 = "$AMBIATA_HADDOCK_BRANCHES"
