--- a/boris-git.toml
+++ b/boris-git.toml
@@ -1,14 +1,11 @@
 [boris]
   version = 1
 
-[build.dist-7-10]
+[build.dist-*]
   git = "refs/heads/master"
 
-[build.branches-7-10]
+[build.branches-*]
   git = "refs/heads/topic/*"
 
-[build.validate]
-  git = "refs/heads/master"
-
-[build.submodules]
+[build.all-*]
   git = "refs/heads/**"
