--- a/boris.toml
+++ b/boris.toml
@@ -5,8 +5,11 @@
 
 [build.branches-7-10]
 
-[build.validate]
+[build.dist-validate]
   command = [["validate-respect"]]
 
-[build.submodules]
+[build.all-rebased]
+  command = [["rebased"]]
+
+[build.all-submodules]
   command = [["dangling-refs"]]
